# home-decision-os

./: .gitignore  README.md  docker-compose.yml  mylist.txt
.github/workflows/: ci.yml  tsukaguchi-alert.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/routes/: cashflow.py  comparison.py  connectors.py  exit_scores.py  loan_scenarios.py  properties.py  rental_scenarios.py
backend/app/connectors/: area_stats.py  athome_search.py  base.py  browser_fetch.py  enrichment.py  homes_search.py  line_notify.py  mlit_transaction.py  rent_estimator.py  suumo_market.py  suumo_search.py  url_preview.py
backend/app/domain/: cashflow_simulator.py  exit_score.py  mortgage.py  ownership_cost.py  rental_cashflow.py
backend/app/ml/: __init__.py  comps_engine.py  data_pipeline.py  exit_score_ml.py  hedonic_model.py  rent_model.py  trend_forecast.py  valuation_engine.py
backend/app/models/: property.py
backend/app/repositories/: property_repo.py
backend/app/schemas/: property.py
backend/app/services/: alert_state.py  listing_alert.py  mylist.py  tsukaguchi_filter.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_initial_tables.py  002_add_exit_score_assessment.py
backend/scripts/: run_tests_in_docker.ps1  run_tsukaguchi_alert.py  test_api_e2e.py
backend/tests/test_api/: test_properties_api.py
backend/tests/test_domain/: test_alert_state.py  test_area_stats.py  test_athome_parser.py  test_browser_fallback.py  test_exit_score.py  test_line_notify.py  test_listing_alert.py  test_mlit_transaction.py  test_mortgage.py  test_mylist.py  test_ownership_cost.py  test_rent_estimator.py  test_rental_cashflow.py  test_tsukaguchi_filter.py  test_url_preview.py
backend/tests/test_ml/: test_comps_engine.py  test_data_pipeline.py  test_exit_score_ml.py  test_hedonic_model.py  test_rent_model.py  test_trend_forecast.py
docs/: GUIDE_JA.md  HOUSING_COST_REFERENCE.md  TODO_MLIT_INTEGRATION.md  tsukaguchi-alert.workflow.yml
frontend/: package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/cashflow/: page.tsx
frontend/app/comparison/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: KpiCard.tsx  PropertyCard.tsx  ScoreBar.tsx
frontend/lib/: api.ts  format.ts  types.ts
(+2 files in other folders)
