[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-decision-os"
version = "0.1.0"
description = "Housing purchase decision engine – mortgage, ownership cost, rental CF & exit score"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["migrations", "migrations.*", "tests", "tests.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "ruff>=0.3,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
